Adicionando redux para gerenciamento de estados e realizando CRUD das entidades Tema e Postagem

--- a/src/paginas/home/Home.css
+++ b/src/paginas/home/Home.css
@@ -13,6 +13,6 @@
     color: white !important;
 }
 
-.postagem{
-    background-color: white;
+.postagens{
+    background-color: white !important;
 }
