--- a/src/paginas/home/Home.css
+++ b/src/paginas/home/Home.css
@@ -2,16 +2,20 @@
     background-color: #3F51B5;
 }
 
+.botao{
+    text-decoration: none !important;
+    border-color: white !important; 
+    background-color: #3F51B5; 
+    color: white !important;
+   
+}
+
 .titulo{
     color: white !important; 
     font-weight: bold !important; 
 }
 
-.botao{
-    border-color: white !important; 
-    background-color: #3F51B5; 
-    color: white !important;
-}
+
 
 .postagens{
     background-color: white !important;
